MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/7.mpl
fun v7 :: A -> B =
    a -> v7(a)
