MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/7.mpl
fun n6 :: A -> B =
    a -> 
        let fun f = 
                b -> a
        in f(a)
